@@ -1,8 +1,8 @@
 Package: sensR
 Type: Package
 Title: Thurstonian models for sensory discrimination
-Version: 1.2-17
-Date: 2012-06-07
+Version: 1.2-18
+Date: 2012-09-10
 Author: Rune Haubo B Christensen and Per Bruun Brockhoff
 Maintainer: Rune Haubo B Christensen <rhbc@imm.dtu.dk>
 Depends: ordinal, numDeriv
