@@ -132,3 +132,9 @@ June 7. 2012: version 1.2-17:
 - tetrad() family object uncluded.
 - Full support for tetrad tests in discrim, d.primePwr, d.primeSS,
   discrimSim, rescale, psyfun, psyinv, psyderiv, betabin.
+
+October 30. 2012: version 1.2-18:
+
+- power functions singled out in R/power.R 
+- minor adjustments to print.discrim
+
